cluster/apps/pfire/swaggerui/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swaggerui
  namespace: pfire
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}/oauth2/start
    hajimari.io/enable: "true"
    hajimari.io/appName: "Swagger UI"
    hajimari.io/icon: "simple-icons:swagger"
    hajimari.io/group: "pfire"
    hajimari.io/info: Interactive API documentation explorer
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: swaggerui.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swaggerui
                port:
                  number: 8080
    - host: swaggerui-attr.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swaggerui-attr
                port:
                  number: 8080
  tls:
    - hosts:
        - swaggerui.${SECRET_DOMAIN}
        - swaggerui-attr.${SECRET_DOMAIN}
